[package]
name = "taproot-bevy-taffy-error"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO: Remove the "dynamic" feature when compiling for production as per:
# https://bevyengine.org/learn/book/getting-started/setup/
bevy = { version = "0.8.1", features = ["dynamic"] }
rand = "0.8.5"

# https://bevy-cheatbook.github.io/pitfalls/performance.html If you want, you
#can also enable LTO (Link-Time-Optimization) for the actual release builds, to
#squeeze out even more performance at the cost of very slow compile times:
[profile.release]
lto = "thin"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
